[package]
name = "todolist-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealdb = "2.2.1"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }